--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
-  "name": "hw5-nodejs-express-soldiermedic",
+  "name": "hw2-nodejs",
   "version": "1.0.0",
-  "description": "[![Open in Visual Studio Code](https://classroom.github.com/assets/open-in-vscode-c66648af7eb3fe8bc4f294546bfd86ef473780cde1dea487d3c4ff354943c9ae.svg)](https://classroom.github.com/online_ide?assignment_repo_id=10222982&assignment_repo_type=AssignmentRepo)",
+  "description": "",
   "main": "studentserver.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cop4808-spring-2023-fullstack-web/hw5-nodejs-express-SoldierMedic.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cop4808-spring-2023-fullstack-web/hw5-nodejs-express-SoldierMedic/issues"
-  },
-  "homepage": "https://github.com/cop4808-spring-2023-fullstack-web/hw5-nodejs-express-SoldierMedic#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
