--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node studentserver.js"
   },
   "dependencies": {
+    "all": "^0.0.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
